--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,10 +67,18 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
 
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    //Test
+    testImplementation "io.mockk:mockk-android:1.12.2"
+    testImplementation"com.google.truth:truth:1.0.1"
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
+
+    //Android Test
+    androidTestImplementation "com.google.truth:truth:1.0.1"
+    androidTestImplementation "io.mockk:mockk-android:1.12.2"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
