--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     //Test
-    testImplementation "io.mockk:mockk-android:1.12.2"
+//    testImplementation "io.mockk:mockk-android:1.12.2"
+    testImplementation "io.mockk:mockk:mockk:1.12.2"
     testImplementation"com.google.truth:truth:1.0.1"
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
