--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,21 +60,28 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.activity:activity-ktx:1.3.1'
 
+    //Fragments
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
+
+
 
     //lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    //Test
 //    testImplementation "io.mockk:mockk-android:1.12.2"
     testImplementation "io.mockk:mockk:1.12.2"
     testImplementation"com.google.truth:truth:1.0.1"
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
+    testImplementation 'app.cash.turbine:turbine:0.7.0'
+    testImplementation 'org.json:json:20140107'
+
 
     //Android Test
     androidTestImplementation "com.google.truth:truth:1.0.1"
